api/api-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
