api/api-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - api-base-namespace-id.engagedtechnologies.com
    secretName: wildcard-tls
  rules:
  - host: api-base-namespace-id.engagedtechnologies.com
    http:
      paths:
      - path: /
        backend:
          serviceName: api
          servicePort: 5000
